# LearNdo

./: .coverage  .env  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
app/: auth.py  main.py
app/config/: settings.py
app/database/: session.py
app/models/: aluno.py  curso.py  professor.py  user.py
app/routes/: alunos.py  auth.py  cursos.py  main.py  professores.py
app/schemas/: aluno.py  curso.py  professor.py  user.py
app/templates/: alunos.html  base.html  cursos.html  dashboard.html  edit_aluno.html  edit_curso.html  edit_professor.html  gerenciar_alunos.html  gerenciar_cursos.html  gerenciar_professores.html  home.html  login.html  professores.html  register.html  unauthenticated.html  unauthenticated.htmml
migrations/: env.py
src/learndo/: app.py
src/learndo/config/: databaseSettings.py
src/learndo/models/: models.py
src/learndo/schemas/: AlunoSchema.py  CursoSchema.py  ProfessorSchema.py  User.py  UserPublic.py
static/css/: style.css
tests/: test_app.py
