[project]
name = "learndo"
version = "0.1.0"
description = ""
authors = [
    {name = "Antony Michael Alves Chagas",email = "antonyalvesz2004@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12.3,<4.0"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)"
]

[tool.poetry]
packages = [{include = "learndo", from = "src"}]

[tool.taskipy.tasks]
run = 'fastapi dev src\learndo\app.py'

pre_test = 'task lint'
test = 'pytest --cov=src/learndo -VV'
post_test = 'coverage html'

lint = 'ruff check . && ruff check . --diff'

format = 'ruff check . --fix && ruff format .'


[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
taskipy = "^1.14.1"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
